--- a/src/main/resources/com/andre/dojo/invoicemanager/change-data.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/change-data.fxml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-
-
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.Spinner?>
-<AnchorPane prefHeight="691.0" prefWidth="978.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.changeDataController">
+<?import javafx.scene.text.Font?>
+
+<AnchorPane fx:id="anchorPaneMain" prefHeight="691.0" prefWidth="978.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.ChangeDataController">
 <children>
    <AnchorPane prefHeight="64.0" prefWidth="978.0" styleClass="top-panel">
       <children>
@@ -21,13 +21,12 @@
                <Image url="@icon/sun.png" />
             </image>
          </ImageView>
-         <TextField layoutX="710.0" layoutY="13.0" prefHeight="39.0" prefWidth="212.0" promptText="Search..." styleClass="field-search" />
-         <Label fx:id="tombolTanggal" alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="39.0" prefWidth="157.0" text="29 Agustus 2024">
+         <Label fx:id="tombolTanggal" alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="39.0" prefWidth="157.0" styleClass="top-label-active" text="Letter">
             <font>
                <Font size="15.0" />
             </font>
          </Label>
-         <Label fx:id="tombolHistory" alignment="CENTER" layoutX="184.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" styleClass="top-label-active" text="Invoice History">
+         <Label fx:id="tombolCustomer" alignment="CENTER" layoutX="184.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" text="Customer">
             <font>
                <Font size="15.0" />
             </font>
@@ -35,35 +34,100 @@
       </children>
    </AnchorPane>
    <Pane layoutY="77.0" prefHeight="613.0" prefWidth="978.0" styleClass="list-invoice">
-      <children>
-         <Label layoutX="14.0" layoutY="15.0" prefHeight="27.0" prefWidth="154.0" text="History in Month">
-            <font>
-               <Font size="18.0" />
-            </font>
-         </Label>
-         <TableView fx:id="tableViewInvoice" layoutX="14.0" layoutY="60.0" minHeight="467.0" prefHeight="467.0" prefWidth="937.0">
-            <columns>
-               <TableColumn fx:id="tableColumnCode" prefWidth="272.0" text="Invoice Code" />
-               <TableColumn fx:id="tableColumnDescription" prefWidth="374.0" text="Description" />
-               <TableColumn fx:id="tableColumnCustomer" prefWidth="274.0" text="Customer" />
-            </columns>
-         </TableView>
-         <Pane fx:id="tombolExport11" layoutX="795.0" layoutY="539.0" prefHeight="42.0" prefWidth="154.0" styleClass="tombol-primary">
-            <children>
-               <ImageView fitHeight="32.0" fitWidth="25.0" layoutX="8.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
-                  <image>
-                     <Image url="@icon/image-down.png" />
-                  </image>
-               </ImageView>
-               <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="114.0" text="History">
-                  <font>
-                     <Font size="15.0" />
-                  </font>
-               </Label>
-            </children>
-         </Pane>
-         <Spinner fx:id="spinner" layoutX="164.0" layoutY="12.0" prefHeight="36.0" prefWidth="217.0" />
-      </children>
-   </Pane>
+         <children>
+            <SplitPane dividerPositions="0.4651639344262295" layoutY="-3.0" prefHeight="613.0" prefWidth="978.0" styleClass="list-invoice">
+              <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="611.0" prefWidth="146.0">
+                     <children>
+                        <Button layoutX="164.0" layoutY="215.0" mnemonicParsing="false" text="Change Logo" />
+                        <Label layoutX="14.0" layoutY="306.0" text="Organization Name : ">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="14.0" layoutY="326.0" prefHeight="25.0" prefWidth="424.0" />
+                        <Label layoutX="14.0" layoutY="361.0" text="Email :">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="14.0" layoutY="381.0" prefHeight="25.0" prefWidth="424.0" />
+                        <Label layoutX="14.0" layoutY="416.0" text="Address :">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="14.0" layoutY="436.0" prefHeight="25.0" prefWidth="424.0" />
+                        <Label layoutX="13.0" layoutY="472.0" text="Description :">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="135.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@logo/seigan.jpg" />
+                           </image>
+                        </ImageView>
+                        <Label layoutX="153.0" layoutY="14.0" text="Organization">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <TextArea layoutX="13.0" layoutY="492.0" prefHeight="87.0" prefWidth="424.0" />
+                        <Separator layoutX="-5.0" layoutY="49.0" prefHeight="4.0" prefWidth="464.0" />
+                        <Button layoutX="164.0" layoutY="215.0" mnemonicParsing="false" text="Change Logo" />
+                        <Label layoutX="15.0" layoutY="251.0" text="Tahun Operasi :">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="15.0" layoutY="271.0" prefHeight="25.0" prefWidth="130.0" />
+                     </children>
+                  </AnchorPane>
+                <AnchorPane prefHeight="611.0" prefWidth="479.0">
+                     <children>
+                        <Label layoutX="14.0" layoutY="252.0" text="Personal Name : ">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="14.0" layoutY="272.0" prefHeight="25.0" prefWidth="485.0" />
+                        <Label layoutX="14.0" layoutY="307.0" text="Bank ID Name : ">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="14.0" layoutY="327.0" prefHeight="25.0" prefWidth="105.0" />
+                        <Label layoutX="16.0" layoutY="362.0" text="Bank Number : ">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="16.0" layoutY="382.0" prefHeight="25.0" prefWidth="485.0" />
+                        <Label layoutX="125.0" layoutY="307.0" text="Bank Name : ">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <TextField layoutX="125.0" layoutY="327.0" prefHeight="25.0" prefWidth="372.0" />
+                        <Button layoutX="204.0" layoutY="215.0" mnemonicParsing="false" text="Change Signature" />
+                        <Separator layoutY="49.0" prefHeight="4.0" prefWidth="519.0" />
+                        <Label layoutX="223.0" layoutY="14.0" text="Personal">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </Label>
+                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="184.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@logo/seigan.jpg" />
+                           </image>
+                        </ImageView>
+                        <Button layoutX="440.0" layoutY="572.0" mnemonicParsing="false" text="Change" />
+                        <Button layoutX="369.0" layoutY="572.0" mnemonicParsing="false" text="Update" />
+                        <Button layoutX="301.0" layoutY="572.0" mnemonicParsing="false" text="Cancel" />
+                     </children></AnchorPane>
+              </items>
+            </SplitPane>
+         </children></Pane>
 </children>
 </AnchorPane>
