--- a/src/main/resources/com/andre/dojo/invoicemanager/export-view.fxml
+++ b/src/main/resources/com/andre/dojo/invoicemanager/export-view.fxml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+
 <AnchorPane prefHeight="691.0" prefWidth="978.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.andre.dojo.invoicemanager.ExportController">
 <children>
     <AnchorPane prefHeight="64.0" prefWidth="978.0" styleClass="top-panel">
@@ -20,13 +18,7 @@
                     <Image url="@icon/sun.png" />
                 </image>
             </ImageView>
-            <TextField layoutX="710.0" layoutY="13.0" prefHeight="39.0" prefWidth="212.0" promptText="Search..." styleClass="field-search" />
-            <Label fx:id="tombolTanggal" alignment="CENTER" layoutX="14.0" layoutY="13.0" prefHeight="39.0" prefWidth="157.0" text="29 Agustus 2024">
-                <font>
-                    <Font size="15.0" />
-                </font>
-            </Label>
-            <Label fx:id="tombolHistory" alignment="CENTER" layoutX="184.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" styleClass="top-label-active" text="Invoice History">
+            <Label fx:id="tombolHistory" alignment="CENTER" layoutX="21.0" layoutY="14.0" prefHeight="37.0" prefWidth="130.0" styleClass="top-label-active" text="Export">
                 <font>
                     <Font size="15.0" />
                 </font>
@@ -35,16 +27,16 @@
     </AnchorPane>
     <Pane layoutY="77.0" prefHeight="613.0" prefWidth="978.0" styleClass="list-invoice">
         <children>
-            <Label layoutX="14.0" layoutY="15.0" prefHeight="27.0" prefWidth="154.0" text="History in Month">
+            <Label layoutX="14.0" layoutY="15.0" prefHeight="27.0" prefWidth="154.0" text="Total Customer : ">
                 <font>
                     <Font size="18.0" />
                 </font>
             </Label>
-            <TableView fx:id="tableViewInvoice" layoutX="14.0" layoutY="60.0" minHeight="467.0" prefHeight="467.0" prefWidth="937.0">
+            <TableView fx:id="tableViewInvoice" layoutX="14.0" layoutY="60.0" minHeight="290.0" prefHeight="458.0" prefWidth="937.0">
                 <columns>
                     <TableColumn fx:id="tableColumnCode" prefWidth="272.0" text="Invoice Code" />
-                    <TableColumn fx:id="tableColumnDescription" prefWidth="374.0" text="Description" />
-                    <TableColumn fx:id="tableColumnCustomer" prefWidth="274.0" text="Customer" />
+                    <TableColumn fx:id="tableColumnDescription" prefWidth="374.0" text="Customer" />
+                    <TableColumn fx:id="tableColumnCustomer" prefWidth="274.0" text="Total Item" />
                 </columns>
             </TableView>
             <Pane fx:id="tombolExport11" layoutX="795.0" layoutY="539.0" prefHeight="42.0" prefWidth="154.0" styleClass="tombol-primary">
@@ -54,14 +46,18 @@
                             <Image url="@icon/image-down.png" />
                         </image>
                     </ImageView>
-                    <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="114.0" text="History">
+                    <Label layoutX="39.0" layoutY="6.0" prefHeight="28.0" prefWidth="114.0" text="Export Now!">
                         <font>
                             <Font size="15.0" />
                         </font>
                     </Label>
                 </children>
             </Pane>
-            <Spinner fx:id="spinner" layoutX="164.0" layoutY="12.0" prefHeight="36.0" prefWidth="217.0" />
+            <Label layoutX="159.0" layoutY="15.0" prefHeight="27.0" prefWidth="33.0" text="0">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
         </children>
     </Pane>
 </children>
